# voidterm

./: CMakeLists.txt  README.md
examples/: leafterm.conf  shell.conf  voidterm.conf
include/: configP.h  fallbacks.h  logger.h  menufallbacks.h  menus.h
src/: configP.cpp  configP.h  main.cpp  menus.cpp  menus.h
src/voidsh/include/: configP.h  exec.h  getInput.h
src/voidsh/src/: main.cpp
